--- a/index-START.html
+++ b/index-START.html
@@ -58,6 +58,12 @@
       // find the comment with the ID of 823423
 
       // Array.prototype.findIndex()
+
+      const index = comments.findIndex((comment) => comment.id === 823423);
+
+      comments.splice(index, 1);
+
+      console.log(index);
       // Find the comment with this ID
       // delete the comment with the ID of 823423
     </script>
